src/main/java/com/example/solid/dip/negative/Basket.java
package com.example.solid.dip.negative;

/**
 * Created by sbiliaiev on 3/6/2018.
 */
public class Basket {

    private int orderAmount;

    public int getOrderAmount() {
        return orderAmount;
    }

    public void setOrderAmount(int orderAmount) {
        this.orderAmount = orderAmount;
    }
}
